--- a/style.css
+++ b/style.css
@@ -4,22 +4,21 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 .logo {
-width: 90px;
+width: 100px;
 padding-bottom: 12px;
 }
-
 /* Cabecera */
 .encabezado{
  display: flex;
- background: rgb(246,0,0);
-background: linear-gradient(90deg, rgba(246,0,0,1) 16%, rgba(227,184,7,1) 77%);
+ background: rgb(236,29,35);
+ background: linear-gradient(97deg, rgba(236,29,35,1) 7%, rgba(101,41,44,1) 62%, rgba(198,198,200,1) 100%);
 justify-content: space-between;
 padding: 10px;
 width: 100%;
-height: 50px;
+height: 55px;
 }
-
 .list-nav{
 list-style: none;    
 display: flex;
@@ -27,50 +26,66 @@ gap: 12px;
 text-align:end;
 color: black;
 }
-
 .item-nav{
     text-decoration: none;
     color: black;
 }
-
-/* Main */
-.title{
-    text-align: center;
-    padding: 10px;
-
+/* Main general */
+.general{
+    background-image: url(/Imagenes/fondo.webp);
 }
-
+.title{
+    background-color: rgba(198,198,200,1);
+    padding: 10px;
+    margin: 12px;
+    display: inline-flex;
+    border-radius: 8px;
+}
+.subtitle{
+    padding: 12px
+}
+.background{
+    background-color: rgba(198,198,200,1);
+    margin-right: 12px;
+    margin-left: 12px;
+    margin-bottom: 12px;
+    padding: 12px;
+    border-radius: 8px;
+}
 /* Imagenes main general */
-
+.image-general{
+    display: flex;
+    justify-content: space-between;
+}
 .fase1-i{
     width: 400px;
-    padding: 12px;
+    height: 216px;
 }
-
 .fase2-i{
     width: 400px;
-    padding: 12px;
+    height: 216px;
 }
-
 .fase3-i{
     width: 400px;
-    padding: 12px;
+    height: 216px;
 }
-
+.fase4-i{
+    width: 400px;
+    height: 216px;
+}
+.orden-cronologico{
+    display: flex;}
 .estrenos-i{
     width: 400px;
-    padding: 12px;
 }
 .series-i{
     width: 400px;
     padding: 12px;
 }
-
 /* Fase 1 */
 .titulo1{
-    text-align: center;
-    padding-top: 10px;
-    }
+    margin: 12px;
+}
     
     .intro1{
         padding: 10px;
@@ -92,4 +107,9 @@ footer{
  
     color: white;
 }
-
+.footerlist{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding-top: 12px;
+}
