--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ color: black;
 
        /* Main inicio */
 .general{
-    background-image: url(/Imagenes/fondo.webp);
+    background-image: url(fondo.webp);
 }
 .title{
     background-color: rgba(198,198,200,1);
@@ -88,7 +88,7 @@ color: black;
 
         /* Fase 1 */
 .general-f1{
-    background-image: url(/Imagenes/fondo-f1.jpg);
+    background-image: url(fondo-f1.jpg);
 }
 .titulog{
     background-color: rgba(198,198,200,1);
