--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ color: black;
 
        /* Main inicio */
 .general{
-    background-image: url(fondo.webp);
+    background-image: url(/Imagenes/fondo.webp);
 }
 .title{
     background-color: rgba(198,198,200,1);
@@ -88,32 +88,140 @@ color: black;
 
         /* Fase 1 */
 .general-f1{
-    background-image: url(fondo-f1.jpg);
+background-image: url(/Imagenes/fondo-f1.jpg);
 }
 .titulog{
-    background-color: rgba(198,198,200,1);
-    padding: 10px;
-    margin: 12px;
-    display: inline-flex;
-    border-radius: 8px;
+background-color: rgba(198,198,200,1);
+padding: 10px;
+margin: 12px;
+display: inline-flex;
+border-radius: 8px;
 }
-.ironman1{
-    
-}
+    /* Iron-man 1 */
 
+.ironman-1{
+    display: flex;
+    justify-content: space-around;
+}
 .img-ironman1{
     height: 300px;
 }
-.img-reseña-ironman1{
-    width: 300px;
-    height: 216px;
-}
-.reseña-exp{
+.ironman1-reseña{
     display: grid;
-
+    height: fit-content;
+    padding: 0 12px;
+}
+.img-reseña-ironman1{
+    width: 329px;
+}
+.reseña-ironman1{
+    padding: 13px 0 0;
+    text-align: inherit;
+}
+     /* Hulk */
+.titulo-hulk{
+    padding-top: 13px;
+}
+.hulk{
+    display: flex;
+    justify-content: space-around;
+}
+.img-hulk{
+    height: 300px;
+}
+.hulk-reseña{
+    display: grid;
+    height: fit-content;
+    padding: 0 12px;
+}
+.img-reseña-hulk{
+    width: 329px;
+}
+.reseña-hulk{
+    padding-top: 10px;
+    text-align: inherit;
+}
+     /* Ironman 2 */
+.titulo-ironman-2{
+    padding-top: 13px;
+}
+.ironman-2{
+    display: flex;
+    justify-content: space-around;
+}
+.img-ironman2{
+    height: 300px;
+}
+.ironman2-reseña{
+    display: grid;
+    height: fit-content;
+    padding: 0 12px;
+}
+.reseña-ironman2{
+    padding-top: 10px;
+    text-align: inherit;
+}
+     /* Thor */
+.titulo-thor{
+    padding-top: 13px;
+}
+.thor{
+    display: flex;
+    justify-content: space-around;
+}
+.img-thor{
+    height: 300px;
+}
+.thor-reseña{
+    display: grid;
+    height: fit-content;
+    padding: 0 12px;
+}
+.reseña-thor{
+    padding-top: 10px;
+    text-align: inherit;
+}
+     /* Capitan america 1 */
+.titulo-capitanamerica{
+    padding-top: 13px;
+}
+.capitanamerica{
+    display: flex;
+    justify-content: space-around;
+}
+.img-capitan{
+    height: 300px;
+}
+.capitanamerica-reseña{
+    display: grid;
+    height: fit-content;
+    padding: 0 12px;
+}
+.reseña-capitanamerica{
+    padding-top: 10px;
+    text-align: inherit;
 }
 
-
+     /* Avengers */
+.titulo-avengers{
+    padding-top: 13px;
+}
+.avengers{
+    display: flex;
+    justify-content: space-around;
+}
+.img-avengers{
+    height: 360px;
+}
+.avengers-reseña{
+    display: grid;
+    height: fit-content;
+    padding: 0 12px;
+}
+.reseña-avengers{
+    padding-top: 10px;
+    text-align: inherit;
+}
 
 /* Pie de pagina */
 footer{
