--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ color: black;
 
        /* Main inicio */
 .general{
-    background-image: url(/Imagenes/fondo.webp);
+    background-image: url(fondo.webp);
 }
 .title{
     background-color: rgba(198,198,200,1);
@@ -75,7 +75,7 @@ color: black;
 
         /* Fase 1 */
 .general-f1{
-background-image: url(/Imagenes/fondo-f1.jpg);
+background-image: url(fondo-f1.jpg);
 }
 .titulog , .titulog2{
 background-color: rgba(198,198,200,1);
@@ -124,7 +124,7 @@ border-radius: 8px;
 
         /* Fase 2 */
 .general-f2{
-    background-image: url(/Imagenes/fondo-f2.jpg);
+    background-image: url(fondo-f2.jpg);
 }
      
 
