--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ color: black;
 
         /* Fase 1 */
 .general-f1{
-background-image: url(fondo-f1.jpg);
+background-image: url(/fondo-f1.jpg);
 }
 
 
@@ -133,20 +133,20 @@ border-radius: 8px;
 
         /* Fase 2 */
 .general-f2{
-    background-image: url(fondo-f2.jpg);
+    background-image: url(/fondo-f2.jpg);
 }
  
         /* Fase 3 */   
 .general-f3{
-    background-image: url(fondo-f3.jpg);
+    background-image: url(/fondo-f3.jpg);
 } 
         /* Fase 4 */
 .general-f4{
-    background-image: url(fondo-f4.jpg);
+    background-image: url(/fondo-f4.jpg);
 }
         /* Futuros estrenos */
 .general-futuros{
-    background-image: url(fondo-futuro.jpg);
+    background-image: url(/fondo-futuro.jpg);
 }
 .Spiderman-noway , .strange2 , .thorlove , .wakanda , .marvels , .antman2 , .guardians3 , .hawkeye , .msmarvel , .moon-knight{
     display: flex;
