--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ color: black;
 
        /* Main inicio */
 .general{
-    background-image: url(/fondo.webp);
+    background-image: url(/Imagenes/fondo.webp);
 }
 .title{
     background-color: rgba(198,198,200,1);
@@ -70,7 +70,7 @@ color: black;
 
         /* Fase 1 */
 .general-f1{
-background-image: url(/fondo-f1.jpg);
+background-image: url(/Imagenes/fondo-f1.jpg);
 }
 
 
@@ -84,14 +84,14 @@ background-image: url(/fondo-f1.jpg);
     padding: 12px;
     border-radius: 8px;
 }
-.titulog , .titulog2 , .titulog3 , .titulog4 , .titulog-futuros{
+.titulog , .titulog2 , .titulog3 , .titulog4 , .titulog-futuros , .titulogs{
 background-color: rgba(198,198,200,1);
 padding: 10px;
 margin: 12px;
 display: inline-flex;
 border-radius: 8px;
 }
-.titulo-hulk , .titulo-ironman-2 , .titulo-thor , .titulo-capitanamerica , .titulo-avengers , .titulo-thor-dark , .titulo-capitanamerica-winter , .titulo-guardians , .titulo-avengers-ultron , .titulo-antman , .titulo-strange , .titulo-guardians2 , .titulo-spiderman-homecoming , .titulo-ragnarok , .titulo-pantera , .titulo-infinity , .titulo-antman-wasp , .titulo-capitana-marvel , .titulo-endgame , .titulo-spiderman-farfrom , .titulo-shang-chi , .titulo-eternals , .titulo-enlaces , .titulo-noway , .titulo-strange2 , .titulo-thor-love , .titulo-wakanda , .titulo-futuros-series , .titulo-hawkeye , .titulo-msmarvel , .titulo-antman2 , .titulo-guardians3{
+.titulo-hulk , .titulo-ironman-2 , .titulo-thor , .titulo-capitanamerica , .titulo-avengers , .titulo-thor-dark , .titulo-capitanamerica-winter , .titulo-guardians , .titulo-avengers-ultron , .titulo-antman , .titulo-strange , .titulo-guardians2 , .titulo-spiderman-homecoming , .titulo-ragnarok , .titulo-pantera , .titulo-infinity , .titulo-antman-wasp , .titulo-capitana-marvel , .titulo-endgame , .titulo-spiderman-farfrom , .titulo-shang-chi , .titulo-eternals , .titulo-enlaces , .titulo-noway , .titulo-strange2 , .titulo-thor-love , .titulo-wakanda , .titulo-futuros-series , .titulo-hawkeye , .titulo-msmarvel , .titulo-antman2 , .titulo-guardians3 , .titulo-thorlove , .titulo-marvels , .titulo-moon , .titulo-shehulk , .titulo-secret{
     padding-top: 16px;
 }
 .ironman-1 , .hulk , .ironman-2 , .thor , .capitanamerica , .avengers , .ironman-3 , .thor-dark , .capitanamerica-winter , .guardians , .avengers-ultron , .ant-man , .capitain-civilwar , .doctor-strange , .guardians2 , .spiderman-homecoming , .thor-ragnarok , .pantera , .infinity , .antman-wasp , .capitana-marvel , .endgame , .spiderman-farfrom , .widow , .shang-chi , .eternals{
@@ -116,7 +116,7 @@ border-radius: 8px;
 }
         /* Imagenes de Fase 2, más grandes */
 
-.img-ironman3 , .img-thor-dark , .img-capitain-winter , .img-guardians , .img-avengers-ultron , .img-antman , .img-strange , .img-guardians2 , .img-homecoming , .img-ragnarok , .img-infinity , .img-antman-wasp , .img-capitana-marvel , .img-endgame , .img-spiderman-farfrom , .img-widow , .img-shang-chi , .img-eternals , .img-spiderman-noway , .img-strange2 , .img-thorlove , .img-wakanda , .img-antman2 , .img-guardians3 , .img-hawkeye , .img-msmarvel , .img-moon{
+.img-ironman3 , .img-thor-dark , .img-capitain-winter , .img-guardians , .img-avengers-ultron , .img-antman , .img-strange , .img-guardians2 , .img-homecoming , .img-ragnarok , .img-infinity , .img-antman-wasp , .img-capitana-marvel , .img-endgame , .img-spiderman-farfrom , .img-widow , .img-shang-chi , .img-eternals , .img-spiderman-noway , .img-strange2 , .img-thorlove , .img-wakanda , .img-antman2 , .img-guardians3 , .img-hawkeye , .img-msmarvel , .img-moon , .img-shehulk , .img-secret , .img-echo , .img-heart , .img-agatha , .img-zombies , .img-spiderman-serie {
     width: 321px;
 }
      /* Especificas */
@@ -133,30 +133,42 @@ border-radius: 8px;
 
         /* Fase 2 */
 .general-f2{
-    background-image: url(/fondo-f2.jpg);
+    background-image: url(/Imagenes/fondo-f2.jpg);
 }
  
         /* Fase 3 */   
 .general-f3{
-    background-image: url(/fondo-f3.jpg);
+    background-image: url(/Imagenes/fondo-f3.jpg);
 } 
         /* Fase 4 */
 .general-f4{
-    background-image: url(/fondo-f4.jpg);
+    background-image: url(/Imagenes/fondo-f4.jpg);
 }
         /* Futuros estrenos */
 .general-futuros{
-    background-image: url(/fondo-futuro.jpg);
+    background-image: url(/Imagenes/fondo-futuro.jpg);
 }
-.Spiderman-noway , .strange2 , .thorlove , .wakanda , .marvels , .antman2 , .guardians3 , .hawkeye , .msmarvel , .moon-knight{
+.Spiderman-noway , .strange2 , .thorlove , .wakanda , .marvels , .antman2 , .msmarvel , .moon-knight , .shehulk , .secret-invasion{
     display: flex;
     justify-content: space-evenly;
 }
-.Spiderman-noway-texto , .strange2-texto , .thorlove-texto , .wakanda-texto , .marvels-texto , .antman2-texto , .hawkeye-texto , .msmarvel-texto , .moon-texto{
+.Spiderman-noway-texto , .strange2-texto , .thorlove-texto , .wakanda-texto , .marvels-texto , .antman2-texto , .guardians3-texto , .hawkeye-texto , .msmarvel-texto , .moon-texto , .shehulk-texto , .secret-texto{
     display: grid;
     height: fit-content;
     padding: 0 12px;
 }
+.guardians3 , .hawkeye{
+    display: flex;
+    
+}
+.series-extra{
+    display: unset;
+}
+.img-groot , .img-armor{
+    padding: 12px 0;
+    width: 312px;
+}
+
 
 
 
