--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ color: black;
 
        /* Main inicio */
 .general{
-    background-image: url(fondo.webp);
+    background-image: url(/Imagenes/fondo.webp);
 }
 .title{
     background-color: rgba(198,198,200,1);
@@ -70,7 +70,7 @@ color: black;
 
         /* Fase 1 */
 .general-f1{
-background-image: url(fondo-f1.jpg);
+background-image: url(/Imagenes/fondo-f1.jpg);
 }
 
 
@@ -91,32 +91,31 @@ margin: 12px;
 display: inline-flex;
 border-radius: 8px;
 }
-.titulo-hulk , .titulo-ironman-2 , .titulo-thor , .titulo-capitanamerica , .titulo-avengers , .titulo-thor-dark , .titulo-capitanamerica-winter , .titulo-guardians , .titulo-avengers-ultron , .titulo-antman , .titulo-strange , .titulo-guardians2 , .titulo-spiderman-homecoming , .titulo-ragnarok , .titulo-pantera , .titulo-infinity , .titulo-antman-wasp , .titulo-capitana-marvel , .titulo-endgame , .titulo-spiderman-farfrom , .titulo-shang-chi , .titulo-eternals , .titulo-enlaces , .titulo-noway , .titulo-strange2 , .titulo-thor-love , .titulo-wakanda , .titulo-futuros-series , .titulo-hawkeye , .titulo-msmarvel , .titulo-antman2 , .titulo-guardians3 , .titulo-thorlove , .titulo-marvels , .titulo-moon , .titulo-shehulk , .titulo-secret{
+.titulo-hulk , .titulo-ironman-2 , .titulo-thor , .titulo-capitanamerica , .titulo-avengers , .titulo-thor-dark , .titulo-capitanamerica-winter , .titulo-guardians , .titulo-avengers-ultron , .titulo-antman , .titulo-strange , .titulo-guardians2 , .titulo-spiderman-homecoming , .titulo-ragnarok , .titulo-pantera , .titulo-infinity , .titulo-antman-wasp , .titulo-capitana-marvel , .titulo-endgame , .titulo-spiderman-farfrom , .titulo-shang-chi , .titulo-eternals , .titulo-enlaces , .titulo-noway , .titulo-strange2 , .titulo-thor-love , .titulo-wakanda , .titulo-futuros-series , .titulo-hawkeye , .titulo-msmarvel , .titulo-antman2 , .titulo-guardians3 , .titulo-thorlove , .titulo-marvels , .titulo-moon , .titulo-shehulk , .titulo-secret , .titulo-shield , .titulo-carter , .titulo-inhumans , .titulo-netflix , .titulo-daredevil , .titulo-jessica , .titulo-luke , .titulo-iron , .titulo-defenders , .titulo-punisher , .titulo-hulu , .titulo-runaways , .titulo-cloak , .titulo-freeform , .titulo-disney , .titulo-wanda , .titulo-falcon , .titulo-loki , .titulo-whatif{
     padding-top: 16px;
 }
-.ironman-1 , .hulk , .ironman-2 , .thor , .capitanamerica , .avengers , .ironman-3 , .thor-dark , .capitanamerica-winter , .guardians , .avengers-ultron , .ant-man , .capitain-civilwar , .doctor-strange , .guardians2 , .spiderman-homecoming , .thor-ragnarok , .pantera , .infinity , .antman-wasp , .capitana-marvel , .endgame , .spiderman-farfrom , .widow , .shang-chi , .eternals{
+.ironman-1 , .hulk , .ironman-2 , .thor , .capitanamerica , .avengers , .ironman-3 , .thor-dark , .capitanamerica-winter , .guardians , .avengers-ultron , .ant-man , .capitain-civilwar , .doctor-strange , .guardians2 , .spiderman-homecoming , .thor-ragnarok , .pantera , .infinity , .antman-wasp , .capitana-marvel , .endgame , .spiderman-farfrom , .widow , .shang-chi , .eternals , .agentsof-shield , .agent-carter , .inhumans , .daredevil , .jessica , .luke , .iron , .defenders , .punisher , .runaways , .cloak , .wanda , .falcon , .loki , .whatif{
     display: flex;
     justify-content: space-around;
 }
-.img-ironman1 , .img-hulk , .img-ironman2 , .img-thor , .img-capitan {
+.img-ironman1 , .img-hulk , .img-ironman2 , .img-thor , .img-capitan , .agent-carter{
     height: 300px;
 }
-.ironman1-reseña , .hulk-reseña , .ironman2-reseña , .thor-reseña , .capitanamerica-reseña , .avengers-reseña , .ironman3-reseña , .thor-dark-reseña , .capitanamerica-winter-reseña , .guardians-reseña , .avengers-ultron-reseña , .antman-reseña , .capitain-civilwar-reseña , .doctor-strange-reseña , .guardians2-reseña , .homecoming-reseña , .ragnarok-reseña , .pantera-reseña , .infinity-reseña , .antman-wasp-reseña , .endgame-reseña , .capitana-marvel-reseña , .spiderman-farfrom-reseña , .blackwidow-reseña , .shang-chi-reseña , .eternals-reseña {
+.ironman1-reseña , .hulk-reseña , .ironman2-reseña , .thor-reseña , .capitanamerica-reseña , .avengers-reseña , .ironman3-reseña , .thor-dark-reseña , .capitanamerica-winter-reseña , .guardians-reseña , .avengers-ultron-reseña , .antman-reseña , .capitain-civilwar-reseña , .doctor-strange-reseña , .guardians2-reseña , .homecoming-reseña , .ragnarok-reseña , .pantera-reseña , .infinity-reseña , .antman-wasp-reseña , .endgame-reseña , .capitana-marvel-reseña , .spiderman-farfrom-reseña , .blackwidow-reseña , .shang-chi-reseña , .eternals-reseña , .shield-reseña , .carter-reseña , .inhumans-reseña , .daredevil-reseña , .jessica-reseña , .luke-reseña , .iron-reseña , .defenders-reseña , .punisher-reseña , .runaways-reseña , .cloak-reseña , .wanda-reseña , .falcon-reseña , .loki-reseña , .whatif-reseña{
     display: grid;
     height: fit-content;
     padding: 0 12px;
 }
-
 .img-reseña-ironman1 , .img-reseña-hulk , .img-reseña-ironman3 , .img-reseña-thor-dark , .img-reseña-capitain-winter , .img-reseña-guardians , .img-reseña-avengers-ultron , .img-reseña-antman {
     width: 329px;
 }
-.reseña-ironman1 , .reseña-hulk , .reseña-ironman2 , .reseña-thor , .reseña-capitanamerica , .reseña-avengers , .reseña-ironman-3 , .reseña-thor-dark , .reseña-capitain-winter , .reseña-guardians , .reseña-avengers-ultron , .reseña-antman , .reseña-guardians2 , .reseña-homecoming , .reseña-ragnarok , .reseña-pantera , .reseña-infinity , .reseña-antman-wasp , .reseña-capitana-marvel , .reseña-spiderman-farfrom , .reseña-blackwidow , .reseña-shang-chi , .reseña-eternals{
+.reseña-ironman1 , .reseña-hulk , .reseña-ironman2 , .reseña-thor , .reseña-capitanamerica , .reseña-avengers , .reseña-ironman-3 , .reseña-thor-dark , .reseña-capitain-winter , .reseña-guardians , .reseña-avengers-ultron , .reseña-antman , .reseña-guardians2 , .reseña-homecoming , .reseña-ragnarok , .reseña-pantera , .reseña-infinity , .reseña-antman-wasp , .reseña-capitana-marvel , .reseña-spiderman-farfrom , .reseña-blackwidow , .reseña-shang-chi , .reseña-eternals , .reseña-shield , .reseña-inhumans , .reseña-daredevil , .reseña-jessica , .reseña-luke , .reseña-iron , .reseña-defenders , .reseña-punisher , .reseña-runaways , .reseña-cloak , .reseña-wanda , .reseña-falcon , .reseña-loki , .reseña-whatif{
     padding: 13px 0 0;
     text-align: inherit;
 }
         /* Imagenes de Fase 2, más grandes */
 
-.img-ironman3 , .img-thor-dark , .img-capitain-winter , .img-guardians , .img-avengers-ultron , .img-antman , .img-strange , .img-guardians2 , .img-homecoming , .img-ragnarok , .img-infinity , .img-antman-wasp , .img-capitana-marvel , .img-endgame , .img-spiderman-farfrom , .img-widow , .img-shang-chi , .img-eternals , .img-spiderman-noway , .img-strange2 , .img-thorlove , .img-wakanda , .img-antman2 , .img-guardians3 , .img-hawkeye , .img-msmarvel , .img-moon , .img-shehulk , .img-secret , .img-echo , .img-heart , .img-agatha , .img-zombies , .img-spiderman-serie {
+.img-ironman3 , .img-thor-dark , .img-capitain-winter , .img-guardians , .img-avengers-ultron , .img-antman , .img-strange , .img-guardians2 , .img-homecoming , .img-ragnarok , .img-infinity , .img-antman-wasp , .img-capitana-marvel , .img-endgame , .img-spiderman-farfrom , .img-widow , .img-shang-chi , .img-eternals , .img-spiderman-noway , .img-strange2 , .img-thorlove , .img-wakanda , .img-antman2 , .img-guardians3 , .img-hawkeye , .img-msmarvel , .img-moon , .img-shehulk , .img-secret , .img-echo , .img-heart , .img-agatha , .img-zombies , .img-spiderman-serie , .img-shield , .img-inhumans , .img-daredevil , .img-jessica , .img-luke , .img-iron , .img-defenders , .img-punisher , .img-runaways , .img-cloak , .img-wanda , .img-falcon , .img-loki , .img-whatif{
     width: 321px;
 }
      /* Especificas */
@@ -133,20 +132,20 @@ border-radius: 8px;
 
         /* Fase 2 */
 .general-f2{
-    background-image: url(fondo-f2.jpg);
+    background-image: url(/Imagenes/fondo-f2.jpg);
 }
  
         /* Fase 3 */   
 .general-f3{
-    background-image: url(fondo-f3.jpg);
+    background-image: url(/Imagenes/fondo-f3.jpg);
 } 
         /* Fase 4 */
 .general-f4{
-    background-image: url(fondo-f4.jpg);
+    background-image: url(/Imagenes/fondo-f4.jpg);
 }
         /* Futuros estrenos */
 .general-futuros{
-    background-image: url(fondo-futuro.jpg);
+    background-image: url(/Imagenes/fondo-futuro.jpg);
 }
 .Spiderman-noway , .strange2 , .thorlove , .wakanda , .marvels , .antman2 , .msmarvel , .moon-knight , .shehulk , .secret-invasion{
     display: flex;
@@ -161,13 +160,28 @@ border-radius: 8px;
     display: flex;
     
 }
-.series-extra{
-    display: unset;
+
+         /* Series */
+.general-series{
+    background-image: url(/Imagenes/fondo-serie.jpg);
 }
-.img-groot , .img-armor{
-    padding: 12px 0;
-    width: 312px;
+.exp-serie{
+    padding: 5px;
 }
+        /* List */
+.listnav-serie{
+    list-style: square;    
+    color: black;
+}
+        /* Logos */
+.logo-serie{
+    width: 180px;
+    height: 110px;
+}
+.logo-f{
+    height: 110px;
+}
+
 
 
 
