--- a/style.css
+++ b/style.css
@@ -181,6 +181,59 @@ border-radius: 8px;
 .logo-f{
     height: 110px;
 }
+
+        /* Cronologico */
+        /* Imagenes */
+.general-crono{
+    background-image: url(/fondo-crono.jpg);
+}
+
+    /* Prede */        
+.container {
+/* Used to position the left vertical line */
+position: relative;
+}
+.container__line {
+/* Border */
+border-right: 2px solid rgba(101,41,44,1);
+/* Positioned at the left */
+left: 16px;
+position: absolute;
+top: 0px;
+/* Take full height */
+height: 100%;
+}
+.container__items {
+/* Reset styles */
+list-style-type: none;
+margin: 0px;
+padding: 0px;
+}
+.container__item {
+margin-bottom: 8px;
+}
+.container__top {
+/* Center the content horizontally */
+align-items: center;
+display: flex;
+}
+.container__circle {
+/* Rounded border */
+background-color: rgba(101,41,44,1);
+border-radius: 9999px;
+/* Size */
+height: 32px;
+width: 32px;
+}
+.container__title {
+/* Take available width */
+flex: 1;
+padding-left: 5px;
+}
+.container__desc {
+/* Make it align with the title */
+margin-left: 48px;
+}
      /* Pie de pagina */
 footer{
     background: rgb(62, 59, 59);
