--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ background-image: url(fondo-f1.jpg);
     padding: 12px;
     border-radius: 8px;
 }
-.titulog , .titulog2 , .titulog3 , .titulog4 , .titulog-futuros , .titulogs{
+.titulog , .titulog2 , .titulog3 , .titulog4 , .titulog-futuros , .titulogs , .titulog-crono{
 background-color: rgba(198,198,200,1);
 padding: 10px;
 margin: 12px;
