--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ border-radius: 8px;
         /* Cronologico */
         /* Imagenes */
 .general-crono{
-    background-image: url(/fondo-crono.jpg);
+    background-image: url(fondo-crono.jpg);
 }
 
     /* Prede */        
